# homesmart

./: .gitignore  README.md
error-handling/: Cargo.toml
error-handling/src/: main.rs
house-price-predictor/: .dockerignore  Cargo.toml  Dockerfile  Makefile
house-price-predictor/src/: aws.rs  data.rs  lib.rs  model.rs
sessions/: session_1.md  session_2.md  session_3.md  session_4.md
